Fix the logo alignment

--- a/client/bill-generator-app/src/invoice.css
+++ b/client/bill-generator-app/src/invoice.css
@@ -150,9 +150,11 @@
 }
 
 .dealer-logo {
-  height: 150px;
+  position: relative;
+  top: -20px;
+  height: 140px;
   width: 200px;
-  margin: -20px 0;
+  margin: 0px 0;
 }
 
 .dealer-logo2 {
